app/main/default/objects/OAH_Case_List__c/fields/Appeal_Outcome__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Appeal_Outcome__c</fullName>
        <label>Appeal Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Agency__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reversed&amp;Remanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>