app/main/default/objects/OAH_Case_List__c/fields/Appeal_Transmitted_to_AG_Court_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Appeal_Transmitted_to_AG_Court_Date__c</fullName>
        <label>Appeal Transmitted to AG-Court Date</label>
        <type>Date</type>
    </fields>
</CustomObject>