app/main/default/objects/OAH_Case_List__c/fields/Boards_and_Commissions__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Boards_and_Commissions__c</fullName>
        <label>Boards and Commissions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>ACC</fullName>
                </value>
                <value>
                    <fullName>ACU</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>ARP</fullName>
                </value>
                <value>
                    <fullName>BAR</fullName>
                </value>
                <value>
                    <fullName>BEH</fullName>
                </value>
                <value>
                    <fullName>BOX</fullName>
                </value>
                <value>
                    <fullName>CEM</fullName>
                </value>
                <value>
                    <fullName>CHI</fullName>
                </value>
                <value>
                    <fullName>CLB</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>ENG</fullName>
                </value>
                <value>
                    <fullName>ENP</fullName>
                </value>
                <value>
                    <fullName>EVM</fullName>
                </value>
                <value>
                    <fullName>HAD</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MBS</fullName>
                </value>
                <value>
                    <fullName>MED</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>MMA</fullName>
                </value>
                <value>
                    <fullName>MVI</fullName>
                </value>
                <value>
                    <fullName>NAT</fullName>
                </value>
                <value>
                    <fullName>NHA</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>OST</fullName>
                </value>
                <value>
                    <fullName>PCO</fullName>
                </value>
                <value>
                    <fullName>PDG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>