app/main/default/objects/OAH_Case_List__c/fields/Bond_Amount__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Bond_Amount__c</fullName>
        <label>Bond Amount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1000</fullName>
                </value>
                <value>
                    <fullName>$2000</fullName>
                </value>
                <value>
                    <fullName>$10,000</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>