app/main/default/objects/OAH_Case_List__c/fields/Bond_Notes__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Bond_Notes__c</fullName>
        <label>Bond Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>