app/main/default/objects/OAH_Case_List__c/fields/Case_Creation_Board_Override__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Case_Creation_Board_Override__c</fullName>
        <label>Case Creation Board Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>*-CN</fullName>
                </value>
                <value>
                    <fullName>*-DR</fullName>
                </value>
                <value>
                    <fullName>*-LIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>