app/main/default/objects/OAH_Case_List__c/fields/Case_Creation_Boards__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Case_Creation_Boards__c</fullName>
        <description>To modify the list of Boards that will auto-generate case numbers modify this picklist</description>
        <label>Case Creation Boards</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>PDH</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>