app/main/default/objects/OAH_Case_List__c/fields/Case_Name__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Case_Name__c</fullName>
        <inlineHelpText>Case Name is a free-form description of the case.  Case Number generally follows one of the following formats:  Board-Year-Number (CLB-2019-001) or Board-Type-Year-Number (CLB-LIC-2019-001).  Do not specify sequential number if it is to be auto-generated.</inlineHelpText>
        <label>Case Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>