app/main/default/objects/OAH_Case_List__c/fields/Case_Phase__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Case_Phase__c</fullName>
        <label>Case Phase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                    <default>true</default>
                    <label>Intake</label>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Remand</fullName>
                </value>
                <value>
                    <fullName>Not Appealed</fullName>
                </value>
                <value>
                    <fullName>Close Case</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>