app/main/default/objects/OAH_Case_List__c/fields/Case_Status__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Case_Status__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Re-Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>