app/main/default/objects/OAH_Case_List__c/fields/Case_Type__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Agency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Cease &amp; Desist</fullName>
                </value>
                <value>
                    <fullName>Citation</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>Dec Relief</fullName>
                </value>
                <value>
                    <fullName>Disability Benefits</fullName>
                </value>
                <value>
                    <fullName>Disciplinary</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>Lic Den</fullName>
                </value>
                <value>
                    <fullName>License-Other</fullName>
                </value>
                <value>
                    <fullName>OSC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PIP</fullName>
                </value>
                <value>
                    <fullName>Retirement Benefits</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>