app/main/default/objects/OAH_Case_List__c/fields/Civil_No__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Civil_No__c</fullName>
        <label>Civil No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>