app/main/default/objects/OAH_Case_List__c/fields/Consolidated_Case__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Consolidated_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box if this is a Consolidated Case File.</description>
        <inlineHelpText>Check this box only if this is a MAIN case that has secondary cases attached to it.  DO NOT check this box if this is a SECONDARY case.</inlineHelpText>
        <label>Consolidated Case</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>