app/main/default/objects/OAH_Case_List__c/fields/Contact__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Cases (Contact)</relationshipLabel>
        <relationshipName>OAH_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>