app/main/default/objects/OAH_Case_List__c/fields/Court_Decision__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Court_Decision__c</fullName>
        <label>Court Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>