app/main/default/objects/OAH_Case_List__c/fields/Court_Decision_Comments__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Court_Decision_Comments__c</fullName>
        <label>Court Decision Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>