app/main/default/objects/OAH_Case_List__c/fields/Court_Order_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Court_Order_Date__c</fullName>
        <label>Court Order Date</label>
        <type>Date</type>
    </fields>
</CustomObject>