app/main/default/objects/OAH_Case_List__c/fields/Created_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
</CustomObject>