app/main/default/objects/OAH_Case_List__c/fields/Date_Assigned_to_Hearings_Officer__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Assigned_to_Hearings_Officer__c</fullName>
        <label>Date Assigned to Hearings Officer</label>
        <type>Date</type>
    </fields>
</CustomObject>