app/main/default/objects/OAH_Case_List__c/fields/Date_Bond_Deposited_Into_General_Funds__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Bond_Deposited_Into_General_Funds__c</fullName>
        <label>Date Bond Deposited Into General Funds</label>
        <type>Date</type>
    </fields>
</CustomObject>