app/main/default/objects/OAH_Case_List__c/fields/Date_Bond_Received__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Bond_Received__c</fullName>
        <label>Date Bond Received</label>
        <type>Date</type>
    </fields>
</CustomObject>