app/main/default/objects/OAH_Case_List__c/fields/Date_Bond_Returned_to_Petitioner__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Bond_Returned_to_Petitioner__c</fullName>
        <label>Date Bond Returned to Petitioner</label>
        <type>Date</type>
    </fields>
</CustomObject>