app/main/default/objects/OAH_Case_List__c/fields/Date_Bond_Transmitted_to_Cashier__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Bond_Transmitted_to_Cashier__c</fullName>
        <label>Date Bond Transmitted to Cashier</label>
        <type>Date</type>
    </fields>
</CustomObject>