app/main/default/objects/OAH_Case_List__c/fields/Date_Case_Transmitted_to_Authority__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Case_Transmitted_to_Authority__c</fullName>
        <label>Date Case Transmitted to Authority</label>
        <type>Date</type>
    </fields>
</CustomObject>