app/main/default/objects/OAH_Case_List__c/fields/Date_Closed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
</CustomObject>