app/main/default/objects/OAH_Case_List__c/fields/Date_Completed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
</CustomObject>