app/main/default/objects/OAH_Case_List__c/fields/Date_File_Destroyed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_File_Destroyed__c</fullName>
        <label>Date File Destroyed</label>
        <type>Date</type>
    </fields>
</CustomObject>