app/main/default/objects/OAH_Case_List__c/fields/Date_Filed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Filed__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
</CustomObject>