app/main/default/objects/OAH_Case_List__c/fields/Date_Hearing_Requested__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Hearing_Requested__c</fullName>
        <label>Date Hearing Requested</label>
        <type>Date</type>
    </fields>
</CustomObject>