app/main/default/objects/OAH_Case_List__c/fields/Date_Mailed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Mailed__c</fullName>
        <label>Date Mailed</label>
        <type>Date</type>
    </fields>
</CustomObject>