app/main/default/objects/OAH_Case_List__c/fields/Date_Notice_Issued__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Notice_Issued__c</fullName>
        <label>Date Notice Issued</label>
        <type>DateTime</type>
    </fields>
</CustomObject>