app/main/default/objects/OAH_Case_List__c/fields/Date_Notice_of_AppealOrder_Received__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Notice_of_AppealOrder_Received__c</fullName>
        <label>Date Notice of Appeal/Order Received</label>
        <type>Date</type>
    </fields>
</CustomObject>