app/main/default/objects/OAH_Case_List__c/fields/Date_of_Oral_Argument__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_of_Oral_Argument__c</fullName>
        <label>Date of Oral Argument</label>
        <type>Date</type>
    </fields>
</CustomObject>