app/main/default/objects/OAH_Case_List__c/fields/Date_of_Submission_of_Closing_Briefs__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_of_Submission_of_Closing_Briefs__c</fullName>
        <label>Date of Submission of Closing Briefs</label>
        <type>Date</type>
    </fields>
</CustomObject>