app/main/default/objects/OAH_Case_List__c/fields/Date_Received__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
</CustomObject>