app/main/default/objects/OAH_Case_List__c/fields/Date_Sent_to_Storage__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Date_Sent_to_Storage__c</fullName>
        <label>Date Sent to Storage</label>
        <type>Date</type>
    </fields>
</CustomObject>