app/main/default/objects/OAH_Case_List__c/fields/Disposition__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division_Agency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Affirmed</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Remanded</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reversed&amp;Remanded</fullName>
                </value>
                <value>
                    <fullName>Final Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>