app/main/default/objects/OAH_Case_List__c/fields/Division_Agency__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Division_Agency__c</fullName>
        <label>Division-Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BREG</fullName>
                </value>
                <value>
                    <fullName>CAAP</fullName>
                </value>
                <value>
                    <fullName>DFI</fullName>
                </value>
                <value>
                    <fullName>ERS</fullName>
                </value>
                <value>
                    <fullName>EUTF</fullName>
                </value>
                <value>
                    <fullName>HCDA</fullName>
                </value>
                <value>
                    <fullName>HPEAP</fullName>
                </value>
                <value>
                    <fullName>INS</fullName>
                </value>
                <value>
                    <fullName>PDH</fullName>
                </value>
                <value>
                    <fullName>PUC</fullName>
                </value>
                <value>
                    <fullName>PVL</fullName>
                </value>
                <value>
                    <fullName>RICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>