app/main/default/objects/OAH_Case_List__c/fields/Document_Title__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Document_Title__c</fullName>
        <description>Docket Sheet Title</description>
        <label>Document Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>