app/main/default/objects/OAH_Case_List__c/fields/Fee_Payment_Method__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Fee_Payment_Method__c</fullName>
        <label>Fee Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>