app/main/default/objects/OAH_Case_List__c/fields/Fee_Required__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Fee_Required__c</fullName>
        <label>Fee Required</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>