app/main/default/objects/OAH_Case_List__c/fields/Fee_Transmitted_to_Cashier_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Fee_Transmitted_to_Cashier_Date__c</fullName>
        <label>Fee Transmitted to Cashier Date</label>
        <type>Date</type>
    </fields>
</CustomObject>