app/main/default/objects/OAH_Case_List__c/fields/Filing_Fee_Received_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Filing_Fee_Received_Date__c</fullName>
        <description>Date the Filing Fee was received</description>
        <label>Filing Fee Received Date</label>
        <type>Date</type>
    </fields>
</CustomObject>