app/main/default/objects/OAH_Case_List__c/fields/Final_Order_Proposed_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Final_Order_Proposed_Date__c</fullName>
        <label>Final Order - Proposed Date</label>
        <type>Date</type>
    </fields>
</CustomObject>