app/main/default/objects/OAH_Case_List__c/fields/Hearings_Officer_Notes__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Hearings_Officer_Notes__c</fullName>
        <label>Hearings Officer Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>