app/main/default/objects/OAH_Case_List__c/fields/Hearings_Officer_Senior__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Hearings_Officer_Senior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Hearings Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>Senior Hearings Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>