app/main/default/objects/OAH_Case_List__c/fields/Hearings_Officer_Text__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Hearings_Officer_Text__c</fullName>
        <formula>Hearings_Officer__r.LastName</formula>
        <label>Hearings Officer text</label>
        <type>Text</type>
    </fields>
</CustomObject>