app/main/default/objects/OAH_Case_List__c/fields/Last_Day_of_Hearing__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Last_Day_of_Hearing__c</fullName>
        <label>Last Day of Hearing</label>
        <type>Date</type>
    </fields>
</CustomObject>