app/main/default/objects/OAH_Case_List__c/fields/OAH_Cons_Cases_Parent_Text__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Cons_Cases_Parent_Text__c</fullName>
        <description>Text field for OAH Consolidated Cases Parent lookup</description>
        <formula>OAH_Consolidated_Cases_Parent__c</formula>
        <label>OAH Cons Cases Parent Text</label>
        <type>Text</type>
    </fields>
</CustomObject>