app/main/default/objects/OAH_Case_List__c/fields/OAH_Consolidated_Cases_Parent__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>OAH_Consolidated_Cases_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAH Consolidated Cases Parent</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Cases</relationshipLabel>
        <relationshipName>OAH_Consolidated_Case_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>