app/main/default/objects/OAH_Case_List__c/fields/Oral_Argument_Issuance_Date__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Oral_Argument_Issuance_Date__c</fullName>
        <label>Oral Argument Issuance Date</label>
        <type>Date</type>
    </fields>
</CustomObject>