app/main/default/objects/OAH_Case_List__c/fields/Other_Bond_Amount__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Other_Bond_Amount__c</fullName>
        <label>Other Bond Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>