app/main/default/objects/OAH_Case_List__c/fields/Storage_Appeals_Box_Number__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Storage_Appeals_Box_Number__c</fullName>
        <label>Storage Appeals Box Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>