app/main/default/objects/OAH_Case_List__c/fields/Storage_Location__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <description>Location where file is stored</description>
        <label>Storage Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>OAH</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>