app/main/default/objects/OAH_Case_List__c/fields/Storage_Notes__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Storage_Notes__c</fullName>
        <label>Storage Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>