app/main/default/objects/OAH_Case_List__c/fields/Storage_Original_Box_Number__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Storage_Original_Box_Number__c</fullName>
        <label>Storage Original Box Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>